lighthouse audit fixes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="9kJZzXb2iBxy8ie7PqdYu0fgnzeJ7Qt0aPOIllboEOI" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="Description" content="Michael Shank’s code and music portfolio"
   <title>Michael Snyder Shank</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Abel&family=Barrio&display=swap" rel="stylesheet">
@@ -79,7 +80,7 @@
             <p class="text-lg">I’m a quick learner with an appetite for education. As a <a class="outline-currentColor underline" href="#music">musician</a> I strive to create miniature sonic worlds, both alien and familiar.</p>
           </div>
           <aside id="aboutMeSidebar" class="hidden sm:block text-lg ml-2">
-              <a aria-label="my codepen" target="_blank" class="outline-currentColor block w-min hover:color4 -ml-3" href="https://codepen.io/ikeshark/">
+              <a aria-label="my codepen" target="_blank" rel="nofollow noreferrer" class="outline-currentColor block w-min hover:color4 -ml-3" href="https://codepen.io/ikeshark/">
                 <!-- codepen icon -->
                 <svg aria-hidden="true" class="w-6 h-6 stroke-currentColor" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                   <polygon fill="none" points="12 2 22 8.5 22 15.5 12 22 2 15.5 2 8.5 12 2" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
@@ -89,13 +90,13 @@
                   <line fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="12" x2="12" y1="2" y2="8.5"/>
                 </svg>
               </a>
-              <a aria-label="my resume" target="_blank" class="outline-currentColor block hover:color4 my-12 ml-4" href="img/resume.pdf" download>
+              <a aria-label="my resume" target="_blank" rel="nofollow noreferrer" class="outline-currentColor block hover:color4 my-12 ml-4" href="img/resume.pdf" download>
                 <!-- file icon -->
                 <svg aria-hidden="true" class="w-6 h-6 fill-currentColor" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
                   <path d="M27 0h-24c-1.65 0-3 1.35-3 3v26c0 1.65 1.35 3 3 3h24c1.65 0 3-1.35 3-3v-26c0-1.65-1.35-3-3-3zM26 28h-22v-24h22v24zM8 18h14v2h-14zM8 22h14v2h-14zM10 9c0-1.657 1.343-3 3-3s3 1.343 3 3c0 1.657-1.343 3-3 3s-3-1.343-3-3zM15 12h-4c-1.65 0-3 0.9-3 2v2h10v-2c0-1.1-1.35-2-3-2z"></path>
                 </svg>
               </a>
-              <a aria-label="my github" target="_blank" class="outline-currentColor block w-min hover:color4 -ml-3" href="https://github.com/ikeshark">
+              <a aria-label="my github" target="_blank" rel="nofollow noreferrer" class="outline-currentColor block w-min hover:color4 -ml-3" href="https://github.com/ikeshark">
                 <!-- github icon -->
                 <svg aria-hidden="true" class="w-6 h-6 fill-currentColor" height="32px" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <path id="github" stroke-width="0" clip-rule="evenodd" d="M16.003,0C7.17,0,0.008,7.162,0.008,15.997  c0,7.067,4.582,13.063,10.94,15.179c0.8,0.146,1.052-0.328,1.052-0.752c0-0.38,0.008-1.442,0-2.777  c-4.449,0.967-5.371-2.107-5.371-2.107c-0.727-1.848-1.775-2.34-1.775-2.34c-1.452-0.992,0.109-0.973,0.109-0.973  c1.605,0.113,2.451,1.649,2.451,1.649c1.427,2.443,3.743,1.737,4.654,1.329c0.146-1.034,0.56-1.739,1.017-2.139  c-3.552-0.404-7.286-1.776-7.286-7.906c0-1.747,0.623-3.174,1.646-4.292C7.28,10.464,6.73,8.837,7.602,6.634  c0,0,1.343-0.43,4.398,1.641c1.276-0.355,2.645-0.532,4.005-0.538c1.359,0.006,2.727,0.183,4.005,0.538  c3.055-2.07,4.396-1.641,4.396-1.641c0.872,2.203,0.323,3.83,0.159,4.234c1.023,1.118,1.644,2.545,1.644,4.292  c0,6.146-3.74,7.498-7.304,7.893C19.479,23.548,20,24.508,20,26c0,2,0,3.902,0,4.428c0,0.428,0.258,0.901,1.07,0.746  C27.422,29.055,32,23.062,32,15.997C32,7.162,24.838,0,16.003,0z" fill="#181616" fill-rule="evenodd"/>
@@ -232,7 +233,7 @@
               <h4 class="color-invert2 -mt-1 text-xl">Singles and Demos</h4>
             </div>
             <p class="color-invert">In 2006, Ike Shark was born a tourist onboard a Panamanian bus. For my latest work, visit my soundcloud</p> 
-              <a aria-label="Listen to Ike Shark singles and demos" href="https://soundcloud.com/ikeshark" target="_blank" class="hiddenLink outline-color3 bg-invert2 hover:filter p-3 text-sm">
+              <a aria-label="Listen to Ike Shark singles and demos" href="https://soundcloud.com/ikeshark" target="_blank" rel="nofollow noreferrer" class="hiddenLink outline-color3 bg-invert2 hover:filter p-3 text-sm">
                 <!-- external file icon -->
                 <svg aria-hidden="true" class="h-4 w-4 inline stroke-currentColor" fill="none" height="24" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" x2="21" y1="14" y2="3"/></svg>
                 <span class="underline">Explore</span>
@@ -246,7 +247,7 @@
               <h4 class="color-invert2 -mt-1 text-xl">Albums &amp; EPs</h4>
             </div>
             <p class="color-invert">Old albums, both short and long, ranging from ambient to psychedelia to downtempo</p> 
-              <a aria-label="Listen to Ike Shark albums" href="https://ikeshark.bandcamp.com" target="_blank" class="hiddenLink outline-color3 bg-invert2 hover:filter p-3 text-sm">
+              <a aria-label="Listen to Ike Shark albums" href="https://ikeshark.bandcamp.com" target="_blank" rel="nofollow noreferrer" class="hiddenLink outline-color3 bg-invert2 hover:filter p-3 text-sm">
                 <!-- external file icon -->
                 <svg aria-hidden="true" class="h-4 w-4 inline stroke-currentColor" fill="none" height="24" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" x2="21" y1="14" y2="3"/></svg>
                 <span class="underline">Explore</span>
@@ -259,10 +260,12 @@
               <h3 class="color-invert font-barrio text-4xl leading-none">BARNYARD SHARKS</h3>
               <h4 class="color-invert2 -mt-1 text-xl">Albums &amp; EPs</h4>
             </div>
-            <p class="color-invert">We’re the Barnyard Sharks and we’re coming for you!</p> <a aria-label="Listen to Barnyard Sharks" href="https://barnyardsharks.bandcamp.com" target="_blank" class="hiddenLink outline-color3 bg-invert2 hover:filter p-3 text-sm">
-              <!-- external file icon -->
-              <svg aria-hidden="true" class="h-4 w-4 inline stroke-currentColor" fill="none" height="24" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" x2="21" y1="14" y2="3"/></svg>
-              <span class="underline">Explore</span></a>
+            <p class="color-invert">We’re the Barnyard Sharks and we’re coming for you!</p> 
+              <a aria-label="Listen to Barnyard Sharks" href="https://barnyardsharks.bandcamp.com" target="_blank" rel="nofollow noreferrer" class="hiddenLink outline-color3 bg-invert2 hover:filter p-3 text-sm">
+                <!-- external file icon -->
+                <svg aria-hidden="true" class="h-4 w-4 inline stroke-currentColor" fill="none" height="24" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" x2="21" y1="14" y2="3"/></svg>
+                <span class="underline">Explore</span>
+              </a>
           </div>
         </div>
         <div class="shadow-color-o3 text-center bg-cover bg-center" style="background-image: url(&quot;img/wutbf.jpg&quot;);">
@@ -271,10 +274,12 @@
               <h3 class="color-invert font-barrio text-4xl leading-none">We Used to be Family</h3>
               <h4 class="color-invert2 -mt-1 text-xl">Album</h4>
             </div>
-            <p class="color-invert">Chamber core ensemble. Bittersweet, brutal, often silly</p> <a aria-label="Listen to We Used to Be Family" href="https://weusedtobefamily.bandcamp.com/" target="_blank" class="hiddenLink outline-color3 bg-invert2 hover:filter p-3 text-sm">
+            <p class="color-invert">Chamber core ensemble. Bittersweet, brutal, often silly</p> 
+            <a aria-label="Listen to We Used to Be Family" href="https://weusedtobefamily.bandcamp.com/" target="_blank" rel="nofollow noreferrer" class="hiddenLink outline-color3 bg-invert2 hover:filter p-3 text-sm">
               <!-- external file icon -->
               <svg aria-hidden="true" class="h-4 w-4 inline stroke-currentColor" fill="none" height="24" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" x2="21" y1="14" y2="3"/></svg>
-              <span class="underline">Explore</span></a>
+              <span class="underline">Explore</span>
+            </a>
           </div>
         </div>
         <div class="shadow-color-o3 text-center bg-cover bg-center" style="background-image: url(&quot;img/leafhouse2.jpg&quot;);">
@@ -283,10 +288,12 @@
               <h3 class="color-invert font-barrio text-4xl leading-none">Leaf House</h3>
               <h4 class="color-invert2 -mt-1 text-xl">Microshow</h4>
             </div>
-            <p class="color-invert">Noise pop: frenetic drumming, sweet singing, chiming discordance</p> <a aria-label="Listen to Leaf House" href="https://mobtownstudios.com/records/leaf-house-microshow/" target="_blank" class="hiddenLink outline-color3 bg-invert2 hover:filter p-3 text-sm">
+            <p class="color-invert">Noise pop: frenetic drumming, sweet singing, chiming discordance</p> 
+            <a aria-label="Listen to Leaf House" href="https://mobtownstudios.com/records/leaf-house-microshow/" target="_blank" rel="nofollow noreferrer" class="hiddenLink outline-color3 bg-invert2 hover:filter p-3 text-sm">
               <!-- external file icon -->
               <svg aria-hidden="true" class="h-4 w-4 inline stroke-currentColor" fill="none" height="24" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" x2="21" y1="14" y2="3"/></svg>
-              <span class="underline">Explore</span></a>
+              <span class="underline">Explore</span>
+            </a>
           </div>
         </div>
         <div class="shadow-color-o3 text-center bg-cover bg-center" style="background-image: url(&quot;img/impmach.jpg&quot;);">
@@ -295,10 +302,12 @@
               <h3 class="color-invert font-barrio text-4xl leading-none">impatience Machine</h3>
               <h4 class="color-invert2 -mt-1 text-xl">Album</h4>
             </div>
-            <p class="color-invert">Arty nonsense. I play bass!</p> <a aria-label="Listen to Impatience Machine" href="https://impatiencemachine.bandcamp.com/" target="_blank" class="hiddenLink outline-color3 bg-invert2 hover:filter p-3 text-sm">
+            <p class="color-invert">Arty nonsense. I play bass!</p> 
+            <a aria-label="Listen to Impatience Machine" href="https://impatiencemachine.bandcamp.com/" target="_blank" rel="nofollow noreferrer" class="hiddenLink outline-color3 bg-invert2 hover:filter p-3 text-sm">
               <!-- external file icon -->
               <svg aria-hidden="true" class="h-4 w-4 inline stroke-currentColor" fill="none" height="24" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" x2="21" y1="14" y2="3"/></svg>
-              <span class="underline">Explore</span></a>
+              <span class="underline">Explore</span>
+            </a>
           </div>
         </div>
       </section>
@@ -316,6 +325,7 @@
         <address class="flex justify-around w-3/4 mx-auto">
           <a
             target="_blank"
+            rel="nofollow noreferrer"
             class="outline-currentColor hover:color4"
             href="https://www.linkedin.com/in/michael-shank-3a2901b9"
             aria-label="My LinkedIn"
@@ -325,6 +335,7 @@
           </a>
           <a
             target="_blank"
+            rel="nofollow noreferrer"
             class="outline-currentColor hover:color4"
             href="img/resume.pdf"
             aria-label="My resume"
@@ -352,7 +363,7 @@
   </div>
 
   <div id="bottomBar" class="hide-bottomBar fixed bottom-0 left-0 w-full p-2 flex items-center justify-between bg shadow-t-color-o3">
-    <iframe height="60" width="290" data-src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/832155290&color=%23160906&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+    <iframe title="Soundcloud player: Ike Shark radio" height="60" width="290" data-src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/832155290&color=%23160906&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
     <button class="h-8 w-8 border-2 border-currentColor rounded-full">&times;</button>
   </div>
 
@@ -481,7 +492,7 @@
       document.querySelector('#darkModeToggle')
         .addEventListener('click', dayOrNight.toggle);
 
-      window.addEventListener('unload', storePreferences);
+      window.addEventListener('pagehide', storePreferences);
 
     })();
   </script>
