--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="Description" content="Michael Shank’s code and music portfolio">
   <meta property="og:title" content="Michael Snyder Shank">
   <meta property="og:description" content="Michael Shank’s code and music portfolio">
-  <meta property="og:image" content="img/og-img.png">
+  <meta property="og:image" content="https://ikeshark.github.io/portfolio/img/og-img.png">
   <meta property="og:image:alt" content="Hi, I'm Michael Snyder Shank I’m a web developer and a musician.">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
