hover opacity bug fix

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
           e.target.closest('.hiddenLinkWrapper').style.opacity = 1;
         })
         elem.addEventListener('blur', e => {
-          e.target.closest('.hiddenLinkWrapper').style.opacity = 0;
+          e.target.closest('.hiddenLinkWrapper').style.opacity = '';
         })
       });
 
